src/snapshots/tptp__common__tests__atomic_defined_word.snap
---
source: src/common.rs
expression: parsed
---
AtomicDefinedWord(
    DollarWord(
        LowerWord(
            "atomic",
        ),
    ),
)
