src/snapshots/tptp__common__tests__atomic_system_word.snap
---
source: src/common.rs
expression: parsed
---
AtomicSystemWord(
    DollarDollarWord(
        LowerWord(
            "atomic",
        ),
    ),
)
