src/snapshots/tptp__common__tests__atomic_word-3.snap
---
source: src/common.rs
expression: parsed
---
SingleQuoted(
    SingleQuoted(
        "single quoted",
    ),
)
