src/snapshots/tptp__common__tests__constant.snap
---
source: src/common.rs
expression: parsed
---
Constant(
    Functor(
        Lower(
            LowerWord(
                "constant",
            ),
        ),
    ),
)
