src/snapshots/tptp__common__tests__defined_constant.snap
---
source: src/common.rs
expression: parsed
---
DefinedConstant(
    DefinedFunctor(
        AtomicDefinedWord(
            DollarWord(
                LowerWord(
                    "defined_constant",
                ),
            ),
        ),
    ),
)
