src/snapshots/tptp__common__tests__defined_functor.snap
---
source: src/common.rs
expression: parsed
---
DefinedFunctor(
    AtomicDefinedWord(
        DollarWord(
            LowerWord(
                "defined_functor",
            ),
        ),
    ),
)
