src/snapshots/tptp__common__tests__defined_term-3.snap
---
source: src/common.rs
expression: parsed
---
Distinct(
    DistinctObject(
        "distinct object",
    ),
)
