src/snapshots/tptp__common__tests__defined_term.snap
---
source: src/common.rs
expression: parsed
---
Number(
    Integer(
        Integer(
            "-123",
        ),
    ),
)
