src/snapshots/tptp__common__tests__defined_type.snap
---
source: src/common.rs
expression: parsed
---
DefinedType(
    AtomicDefinedWord(
        DollarWord(
            LowerWord(
                "defined_type",
            ),
        ),
    ),
)
