src/snapshots/tptp__common__tests__dollar_dollar_word.snap
---
source: src/common.rs
expression: parsed
---
DollarDollarWord(
    LowerWord(
        "dollar",
    ),
)
