src/snapshots/tptp__common__tests__dollar_word.snap
---
source: src/common.rs
expression: parsed
---
DollarWord(
    LowerWord(
        "dollar",
    ),
)
