src/snapshots/tptp__common__tests__functor.snap
---
source: src/common.rs
expression: parsed
---
Functor(
    Lower(
        LowerWord(
            "functor",
        ),
    ),
)
